src/objects/Product_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>External_Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Mapping</label>
    <nameField>
        <displayFormat>ProductMapping-{000000}</displayFormat>
        <label>Product Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>